2002-08-06  Richard Williamson (Local)  <rjw@apple.com>

        Frame resizing related changes.  Frames are now resizable
        w/ a resize bar.  Still need to draw frame borders.
        
        * khtml/rendering/render_frames.cpp:
        (RenderFrameSet::userResize):
        (RenderFrame::slotViewCleared):
        * kwq/KWQFrame.mm:
        (QFrame::setFrameStyle):
        (QFrame::frameStyle):
        (QFrame::frameWidth):
        * kwq/KWQWidget.mm:
        (QWidget::lockDrawingFocus):
        (QWidget::unlockDrawingFocus):
        (QWidget::flushDrawing):
        (QWidget::enableFlushDrawing):
        (QWidget::disableFlushDrawing):
        (QWidget::setDrawingAlpha):
        (QWidget::displayRect):
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge drawRect:withPainter:]):
        * kwq/qt/qframe.h:
        * kwq/qt/qwidget.h:

2002-08-06  Maciej Stachowiak  <mjs@apple.com>

	Removed some APPLE_CHANGES no longer needed after the part change.
	
        * khtml/khtml_part.cpp:
        (KHTMLPart::openedByJS): Don't call impl version.
        (KHTMLPart::setOpenedByJS): Don't call impl version.
        * kwq/KWQKHTMLPartImpl.h:
        * kwq/KWQKHTMLPartImpl.mm: Removed openedByJS and setOpenedByJS.
        * kwq/WebCoreBridge.h: Don't prototype setOpenedByScript: and
	openedByScript methods now that they are not needed.

2002-08-06  David Hyatt  <hyatt@apple.com>

	Make checkboxes and radio buttons use the small control
	size.  Tweak their baselines to not use font metrics and
	to line up properly.  (voodooextreme.com nearly renders
	the left column correctly now.)
	
        * khtml/rendering/render_form.cpp:
        (RenderCheckBox::baselinePosition):
        (RenderRadioButton::baselinePosition):
        * khtml/rendering/render_form.h:
        * kwq/KWQCheckBox.mm:
        (QCheckBox::QCheckBox):
        * kwq/KWQRadioButton.mm:
        (QRadioButton::QRadioButton):

2002-08-06  John Sullivan  <sullivan@apple.com>
