@@ -1,3 +1,8 @@
+2002-08-06  Darin Adler  <darin@apple.com>
+
+        * kwq/KWQKHTMLPartImpl.mm: (KWQKHTMLPartImpl::overURL):
+	Fix crash in overURL, another case just like bug 3006336.
+
 2002-08-06  Richard Williamson (Local)  <rjw@apple.com>
 
         Frame resizing related changes.  Frames are now resizable
